[package]
name = "rmon"
version = "0.1.0"
edition = "2021"
description = "A lightweight CLI system monitor with real-time CPU, memory, disk, and network monitoring"
authors = ["System Monitor Team"]
license = "MIT"
homepage = "https://github.com/example/rmon"
repository = "https://github.com/example/rmon"
keywords = ["system", "monitor", "cli", "performance", "network"]
categories = ["command-line-utilities"]

[[bin]]
name = "rmon"
path = "src/main.rs"

[dependencies]
sysinfo = "0.32"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.28"
ratatui = "0.29"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
